footer fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ header p {
 	padding: 0 10px;
 }
 footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
